ui/scss/component/_livestream.scss
$discussion-header__height: 3rem;
$recent-msg-button__height: 2rem;

.livestream {
  flex: 1;
  width: 100%;
  padding-top: var(--aspect-ratio-standard);
  position: relative;
  border-radius: var(--border-radius);

  .media__thumb,
  iframe {
    overflow: hidden;
    border-radius: var(--border-radius);
    height: 100%;
    max-height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  ~ .notice-message {
    margin-top: var(--spacing-m);
  }
}

.livestream__discussion {
  width: 100%;
  background-color: var(--color-header-background);

  @media (min-width: $breakpoint-medium) {
    margin: 0;
    width: var(--livestream-comments-width);
    height: calc(100vh - var(--header-height) - var(--spacing-l));
    position: absolute;
    right: 0;
    top: 0px;
    bottom: 0;
    border-radius: var(--border-radius);
    border-top: none;
    border-bottom: none;
    border-right: none;

    .card__main-actions {
      padding: 0;
    }

    .recommended-content__toggles {
      margin-right: var(--spacing-xs);

      .button-toggle--active {
        &:hover {
          p,
          span {
            color: var(--color-primary-contrast) !important;
          }
        }
      }

      .button-toggle {
        background-color: rgba(var(--color-primary-dynamic), 0.08);

        &:hover {
          background-color: rgba(var(--color-primary-dynamic), 0.1);
          p,
          span {
            color: var(--color-primary);
          }
        }
      }
    }
  }

  .comment__author {
    color: rgba(var(--color-text-base), 0.5);
    margin-top: var(--spacing-xxs);
    max-width: unset;
    &:hover {
      color: var(--color-primary) !important;
    }
  }

  .channel-name {
    color: var(--color-secondary);
    &:hover {
      color: var(--color-primary);
    }
  }
}

.livestream-discussion__header {
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--spacing-s);
  margin-bottom: 0;
  align-items: center;

  @media (min-width: $breakpoint-small) {
    height: $discussion-header__height;
    padding: 0 var(--spacing-s);
    padding-right: 0;
  }
}

.livestream-discussion__title {
  @extend .card__title-section;
  @extend .card__title-section--small;
  padding: 0;
}

.livestream__comments-wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - var(--header-height) - #{$discussion-header__height} - var(--spacing-l));
}

.livestream__comments {
  display: flex;
  flex-direction: column-reverse;
  font-size: var(--font-small);
  overflow-y: scroll;
  overflow-x: visible;
  padding-top: var(--spacing-s);
  width: 100%;
}

.livestream-comment {
  list-style-type: none;
  position: relative;

  @media (min-width: $breakpoint-small) {
    &:hover {
      background-color: rgba(var(--color-primary-dynamic), 0.1);

      .menu__button {
        opacity: 1;
      }

      .comment__author {
        color: var(--color-primary);
      }
    }

    &:not(:hover) {
      .menu__button:not(:focus):not([aria-expanded='true']) {
        opacity: 0;
      }
    }
  }

  .channel-name {
    font-size: var(--font-xsmall);
  }
}

.livestream-comment__info {
  overflow: hidden;
}

.livestream-comment--superchat {
  background-color: rgba(var(--color-primary-dynamic), 0.03);

  + .livestream-comment--superchat {
    margin-bottom: var(--spacing-xxs);
  }

  .livestream-comment__body {
    display: flex;
    align-items: flex-start;
    flex-direction: unset;
    flex: unset;
  }

  .livestream-comment__info {
    margin-top: calc(var(--spacing-xxs) / 2);
  }

  &::before {
    position: absolute;
    left: 0;
    height: 100%;
    max-height: 4rem;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    width: 5px;
    background-color: var(--color-superchat);
    content: '';
  }
}

.livestream-comment__body {
  display: flex;
  align-items: flex-start;
  margin-left: var(--spacing-s);
  overflow: hidden;

  .livestream-comment__info--sticker {
    display: flex;
    margin: var(--spacing-xxs) 0;
  }

  .channel-thumbnail {
    @include handleChannelGif(2rem);
    margin-top: var(--spacing-xxs);
    flex-shrink: 0;
  }
}

.livestream-comment__menu {
  position: absolute;
  right: var(--spacing-xs);
  top: var(--spacing-xs);
}

.livestream__comments__scroll-to-recent {
  margin-top: -$recent-msg-button__height;
  align-self: center;
  margin-bottom: var(--spacing-xs);
  font-size: var(--font-xsmall);
  padding: var(--spacing-xxs) var(--spacing-s);
  opacity: 0.9;

  &:hover {
    opacity: 1;
  }
}

.livestream__comment-create {
  padding: var(--spacing-s);
  border-top: 1px solid var(--color-border);
  margin-top: auto;

  .commentCreate {
    select,
    textarea,
    input {
      background-color: var(--color-header-button);
    }
    .help {
      color: var(--color-text);
    }
    .button {
      background-color: var(--color-header-button);
      color: var(--color-text);
    }
    .button--link {
      border-radius: var(--border-radius);
    }
  }

  .section {
    margin-top: var(--spacing-s);
  }
}

.livestream__channel-link {
  margin-bottom: var(--spacing-xl);
  box-shadow: 0 0 0 rgba(246, 72, 83, 0.4);
  animation: livePulse 2s infinite;
  padding: var(--spacing-m);

  background: rgba(var(--color-primary-dynamic), 0.1);
  border-radius: var(--border-radius);

  &:hover {
    cursor: pointer;
  }
}

@keyframes livePulse {
  0% {
    box-shadow: 0 0 0 0 rgba(246, 72, 83, 0.4);
  }
  70% {
    box-shadow: 0 0 0 10px rgba(246, 72, 83, 0);
  }
  100% {
    box-shadow: 0 0 0 0 rgba(246, 72, 83, 0);
  }
}

.livestream__publish-checkbox {
  margin: var(--spacing-l) 0;

  .checkbox,
  .radio {
    margin-top: var(--spacing-m);

    label {
      color: #444;
    }
  }
}

.livestream__creator-message {
  background-color: #fde68a;
  padding: var(--spacing-m);
  color: black;
  border-radius: var(--border-radius);

  h4 {
    font-weight: bold;
    font-size: var(--font-small);
    margin-bottom: var(--spacing-s);
  }
}

.livestream__publish-intro {
  margin-top: var(--spacing-l);
}

.livestream__viewer-count {
  display: flex;
  align-items: center;

  .icon {
    margin-left: var(--spacing-xs);
  }
}

.livestream-superchats__wrapper {
  flex-shrink: 0;
  position: relative;
  overflow-x: scroll;
  border-right: var(--spacing-s) solid var(--color-card-background);
  border-bottom: 1px solid var(--color-border);
  font-size: var(--font-small);
  background-color: var(--color-card-background);

  @media (min-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    width: var(--livestream-comments-width);
  }
}

.livestream-pinned__wrapper {
  display: flex;
  flex-shrink: 0;
  position: relative;
  padding: var(--spacing-s) var(--spacing-xs);
  border-bottom: 1px solid var(--color-border);
  font-size: var(--font-small);
  background-color: rgba(var(--color-primary-dynamic), 0.1);
  width: 100%;

  .livestream-comment {
    width: 100%;
    padding-top: var(--spacing-xs);
    max-height: 6rem;
    overflow-y: scroll;
  }

  .close-button {
    border-left: 1px solid var(--color-border);
    padding: 0 calc(var(--spacing-m) - var(--spacing-xs)) 0 var(--spacing-m);
    color: var(--color-text-subtitle);
  }

  @media (min-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    width: var(--livestream-comments-width);
  }
}

.livestream-superchat__amount-large {
  .credit-amount {
    display: flex;
    align-items: center;
    flex-wrap: nowrap;
  }
}

.livestream-superchats__inner {
  display: flex;

  .close-button {
    padding-left: var(--spacing-m);
    padding-right: var(--spacing-l);
  }
}

.livestream-superchat {
  display: flex;
  margin-right: var(--spacing-xs);
  padding: var(--spacing-xxs);
  border-radius: var(--border-radius);

  .channel-thumbnail {
    margin-right: var(--spacing-xs);
    @include handleChannelGif(2rem);
  }

  &:first-of-type {
    background-color: var(--color-superchat);

    .channel-name {
      max-width: 8rem;
    }
  }

  &:nth-of-type(2) {
    background-color: var(--color-superchat-2);
  }
  &:nth-of-type(3) {
    background-color: var(--color-superchat-3);
  }

  &:nth-of-type(-n + 3) {
    .channel-name,
    .credit-amount {
      color: var(--color-black);
    }
  }

  .channel-name {
    max-width: 5rem;
  }
}

.livestream-superchat__info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: var(--font-xsmall);
}

.livestream-superchat__info--sticker {
  display: flex;
  align-items: flex-start;
  flex-direction: row;
  width: 8rem;
  height: 3rem;

  .livestream-superchat__info--image {
    padding-left: var(--spacing-m);
    width: 100%;
    height: 100%;
  }

  .button {
    margin-top: calc(var(--spacing-xxs) / 2);
  }
}

.livestream-superchat__info--not-sticker {
  flex-direction: row;
}

.livestream-superchat__banner {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  padding: 0.25rem var(--spacing-s);
  display: inline-block;
  position: relative;
}

// This is just a two small circles that overlap to make it look like
// the banner and the left border are connected
/*
.livestream-superchat__banner-corner {
  height: calc(var(--border-radius) * 2);
  width: calc(var(--border-radius) * 2);
  border-radius: 50%;
  position: absolute;
  background-color: var(--color-superchat);
  bottom: 0;
  left: 0;
  transform: translateX(0) translateY(50%);

  &::after {
    content: '';
    height: calc(var(--border-radius) * 2);
    width: calc(var(--border-radius) * 2);
    border-top-left-radius: var(--border-radius);
    background-color: var(--color-card-background);
    position: absolute;
    bottom: 0;
    left: 0;
    transform: translateX(25%) translateY(50%);
  }
}
*/

.livestream-comment__text {
  padding-right: var(--spacing-xl);
  padding-bottom: var(--spacing-xxs);

  .markdown-preview {
    p {
      word-break: break-word;
    }

    .channel-name {
      font-size: var(--font-small);
    }
  }
}

.livestream-superchat__tooltip-amount {
  margin-top: var(--spacing-xs);
  margin-left: 0;
  background-color: transparent;
  padding: 0;
}

.livestream__superchat-comment {
  margin-top: var(--spacing-s);
  max-width: 5rem;
  overflow-wrap: break-word;
}

.livestream-superchat__amount {
  .credit-amount {
    color: var(--color-text);
  }
}

.livestream-superchat__amount-large {
  min-width: 2.5rem;
}

.table--livestream-data {
  td:nth-of-type(1) {
    max-width: 4rem;
  }
  td:nth-of-type(2) {
    min-width: 8.5rem;
  }
  td:nth-of-type(3) {
    width: 4rem;
    min-width: 9rem;
  }
  td:nth-of-type(4) {
    display: none;
  }
  @media (min-width: $breakpoint-small) {
    td:nth-of-type(1) {
      max-width: 4rem;
    }
    td:nth-of-type(2) {
      width: 40%;
    }
    td:nth-of-type(3) {
      width: 5rem;
    }
    td:nth-of-type(4) {
      width: 100%;
      display: table-cell;
    }
  }
}

.livestream_thumb_container {
  height: 4rem;
  width: 100%;
  display: flex;
  flex-direction: row;
  overflow: hidden;
}

.livestream___thumb {
  padding: 0 var(--spacing-xxs);
  object-fit: cover;
}

.livestream__data-row {
  cursor: pointer;
  .radio {
    cursor: pointer;
  }
  &:nth-child(n) {
    &.livestream__data-row--selected {
      background-color: var(--color-button-toggle-bg);
    }
  }
  td {
    padding-right: var(--spacing-m);

    @media (max-width: $breakpoint-small) {
      padding: var(--spacing-xs);
    }
  }
  &:hover {
    td {
      .radio {
        label::before {
          cursor: pointer;
          background-color: var(--color-input-toggle-bg-hover);
        }
      }
      label {
        cursor: pointer;
      }
    }

    input {
      cursor: pointer;
      background-color: var(--color-header-bg-selected);
    }
  }
}

.livestream-list--view-more {
  display: flex;
  align-items: flex-end;
  margin-bottom: var(--spacing-m);
}

